route/route.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: harbor
      chart: harbor-0.1.1
      heritage: Tiller
      release: harbor
    name: harbor-harbor-registry
  spec:
    host: harbor.cloud.prd.asiainfo.com
    path: /v2
    port:
      targetPort: 5000
    tls:
      insecureEdgeTerminationPolicy: Allow
      termination: edge
    to:
      kind: Service
      name: harbor-harbor-registry
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: harbor
      chart: harbor-0.1.1
      heritage: Tiller
      release: harbor
    name: harbor-harbor-ui
  spec:
    host: harbor.cloud.prd.asiainfo.com
    port:
      targetPort: 8080
    tls:
      insecureEdgeTerminationPolicy: Allow
      termination: edge
    to:
      kind: Service
      name: harbor-harbor-ui
      weight: 100
    wildcardPolicy: None
kind: List
metadata: {}
